k8s/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: toolva-frontend
  namespace: toolva
  labels:
    app: toolva-frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: toolva-frontend
---
apiVersion: v1
kind: Service
metadata:
  name: toolva-backend
  namespace: toolva
  labels:
    app: toolva-backend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: toolva-backend
